tests/test-dirs/upstream-typing-recovery/original-tests/apply_wrong_label.compilers.reference
File "apply_wrong_label.ml", line 12, characters 8-15:
12 | let _ = g ~y:10
             ^^^^^^^
Warning 5 [ignored-partial-application]: this function application is partial,
  maybe some arguments are missing.

File "apply_wrong_label.ml", line 1:
Error: Multiple errors were encountered
File "apply_wrong_label.ml", line 12, characters 13-15:
12 | let _ = g ~y:10
                  ^^
  The function applied to this argument has type x:int -> int
This argument cannot be applied with label ~y
File "apply_wrong_label.ml", line 16, characters 13-14:
16 | let _ = h ~y:5 10
                  ^
  The function applied to this argument has type ?x:int -> int
This argument cannot be applied with label ~y
File "apply_wrong_label.ml", line 18, characters 17-19:
18 | let t : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
